delete complete add api

--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,1 @@
-{
-  "tasks": [
-    { "name": "bonjour", "completed": false },
-    { "name": "bonjour2", "completed": true },
-    { "name": "bonjour3", "completed": true }
-  ]
-}
+{"tasks":[{"name":"bonjour2","completed":true},{"name":"asdf","completed":false},{"name":"asfddsf","completed":false},{"name":"asfddsfasdf","completed":false},{"name":"1","completed":false},{"name":"1","completed":false},{"name":"1","completed":false}]}
