--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"tasks":[{"name":"bonjour2","completed":true},{"name":"asdf","completed":false},{"name":"asfddsf","completed":false},{"name":"asfddsfasdf","completed":false},{"name":"1","completed":false},{"name":"1","completed":false},{"name":"1","completed":false}]}
+{"tasks":[{"name":"Faire la lessive","completed":true},{"name":"Faire le ménage","completed":false},{"name":"Nourrir le blobfish","completed":false},{"name":"Réviser le test de gestion de projet","completed":true}]}
